--- a/Labfiles/01-app-develop/Python/.env
+++ b/Labfiles/01-app-develop/Python/.env
@@ -1,3 +1,3 @@
-AZURE_OAI_ENDPOINT=
+AZURE_OAI_ENDPOINT=https://user1-52129915.openai.azure.com/
 AZURE_OAI_KEY=
-AZURE_OAI_DEPLOYMENT=
+AZURE_OAI_DEPLOYMENT=gpt-4o
