--- a/Labfiles/02-use-own-data/Python/.env
+++ b/Labfiles/02-use-own-data/Python/.env
@@ -1,6 +1,6 @@
-AZURE_OAI_ENDPOINT=<endpoint>
-AZURE_OAI_KEY=<key>
-AZURE_OAI_DEPLOYMENT=<deployment_name>
-AZURE_SEARCH_ENDPOINT=<search_endpoint>
-AZURE_SEARCH_KEY=<search_key>
-AZURE_SEARCH_INDEX=<search_index>
+AZURE_OAI_ENDPOINT=https://user1-52131832aoai.openai.azure.com/
+AZURE_OAI_KEY=
+AZURE_OAI_DEPLOYMENT=gpt-4o
+AZURE_SEARCH_ENDPOINT=https://user1-52131832aisearch.search.windows.net
+AZURE_SEARCH_KEY=
+AZURE_SEARCH_INDEX=margies-index-rag-1749655828461
